# albertpkg

./: CHANGELOG.md  README.md  pyproject.toml  usage.sh
src/albertpkg/: __init__.py  getgitversion.py
src/albertpkg/entities/: package.py  register.py
